test nx exec binary file

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - run: nx run nest-consul:build
+      - run: ./node_modules/.bin/nx run nest-consul:build
 
   publish-npm:
     needs: build
