--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,27 +6,32 @@ name: Node.js Package
 on: push
 
 jobs:
-  build:
+  build-Publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+          registry-url: https://registry.npmjs.org/
       - run: npm install -g pnpm
       - run: pnpm install
       - run: ./node_modules/.bin/nx run nest-consul:build
-
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
       - run: cd dist/packages/nest-consul
       - run: ls -l
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
+
+#  publish-npm:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#          registry-url: https://registry.npmjs.org/
+#      - run: cd dist/packages/nest-consul
+#      - run: ls -l
+#        env:
+#          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
