--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,6 +18,7 @@ jobs:
       - run: pnpm install
       - run: ./node_modules/.bin/nx run nest-consul:build
       - run: cd dist/packages/nest-consul & ls -l
+      - run: npm publish --dry-run
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
 
