test npm file test

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,9 @@ jobs:
       - run: npm install -g pnpm
       - run: pnpm install
       - run: ./node_modules/.bin/nx run nest-consul:build
+      - run: cp -r ./dist/packages/nest-consul dist_npm_publish
       - run: npm publish --dry-run
+      - run: cat dist_npm_publish/package.json
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
 
