test npm publish

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,6 +20,7 @@ jobs:
       - run: cp -r ./dist/packages/nest-consul dist_npm_publish
       - run: npm publish --dry-run
       - run: cat dist_npm_publish/package.json
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
 
