job update nest-consul

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build-Publish:
+  Publish-NestConsul:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,17 +27,3 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
-
-#  publish-npm:
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: 16
-#          registry-url: https://registry.npmjs.org/
-#      - run: cd dist/packages/nest-consul
-#      - run: ls -l
-#        env:
-#          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
