init bootstrap & test publish

--- a/packages/nest-bootstrap/package.json
+++ b/packages/nest-bootstrap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devtoolbox/nest-consul",
+  "name": "@devtoolbox/nest-bootstrap",
   "version": "0.0.3",
   "author": {
     "email": "silence@sailengsi.com",
