--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish-Pnpm
 
 on:
   push:
@@ -9,6 +9,24 @@ on:
       - master
 
 jobs:
+  Publish-NestBootstrap:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+      - run: npm install -g pnpm
+      - run: pnpm install
+      - run: ./node_modules/.bin/nx run nest-bootstrap:build
+      - run: cp -r ./dist/packages/nest-bootstrap dist_npm_publish
+      - run: cp -r ./dist_npm_publish/package.json .
+      - run: npm publish --dry-run
+      - run: cat dist_npm_publish/package.json
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
   Publish-NestConsul:
     runs-on: ubuntu-latest
     steps:
